syntax = "proto2";

package recursive_dependency_embedding;

import "sequence_node.proto";

message SequenceNodeCandidates {
  optional int64 head = 1;
  repeated SequenceNode children = 2;
  optional SequenceNodeCandidates children_candidate = 3;
  repeated SequenceNode candidates = 4;
}